--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <% include ./partials/_stylesheets %>
     <% include ./partials/_scripts %>
-    <title>The Chicken Coop</title>
+    <title>Chicken Run</title>
   </head>
 
   <body>
@@ -19,6 +19,7 @@
       <% } %>
     </header>
     <main>
+      <div id="layoutBasics">
       <%- body %>
     </main>
     <footer>
