--- a/views/partials/_navbar.ejs
+++ b/views/partials/_navbar.ejs
@@ -1,6 +1,6 @@
 <nav class="container">
   <ul>
-    <li class="menu">&#9776;
+    <li class="menu"&#9776>;
     <div class="dropdown">
       <% if(locals.isAuthenticated) { %>
         <li><a href="/logout">Logout</a></li>
