--- a/views/statics/index.ejs
+++ b/views/statics/index.ejs
@@ -1,5 +1,4 @@
-<h1>Chicken Coop</h1>
-<div class="home">
-  <p>The place to organise your hens, on your hen weekend</p>
-
-<img src="http://i.giphy.com/l3vRba5cZpOUM1cfS.gif">
+<div class="container-fluid">
+<section id="chook">
+  <h1>Chicken Run</h1>
+  <p>organised hens, on a crazy weekend!</p>
