--- a/views/events/show.ejs
+++ b/views/events/show.ejs
@@ -26,7 +26,7 @@
           <% if(locals.isAuthenticated && comment.ownedBy(user)) { %>
             <form method="POST" action="/events/<%= event.id %>/comments/<%= comment.id %>">
               <input type="hidden" name="_method" value="DELETE">
-              <button>Delete</button>
+              <button type="button" class="btn btn-outline-info waves-effect">Delete</button>
             </form>
           <% } %>
         <% }) %>
@@ -37,7 +37,7 @@
           <h4>Add a comment</h4>
           <form method="POST" action="/events/<%= event.id %>/comments">
             <textarea name="content" id="content" placeholder="Add comment"></textarea>
-            <button class="button">Cluck to Add</button>
+            <button type="button" class="btn btn-outline-info waves-effect">Cluck to add</button>
           </form>
         </section>
       <% } %>
