--- a/views/registrations/new.ejs
+++ b/views/registrations/new.ejs
@@ -1,6 +1,9 @@
 <h1>Register</h1>
 <div class="container">
   <form method="POST" action="/register" enctype="multipart/form-data" class="form-horizontal">
+    <div class="page-header">
+      <h1>Get registered and get involved...</h1>
+    </div>
 
     <div class="form-group">
       <label class="control-label col-sm-2" for="firstName"></label>
@@ -60,6 +63,6 @@
       <textarea name="funnyStory" id="funnyStory" placeholder="Got a funny story about her?" class="form-control"></textarea>
     </div>
 
-    <button type="submit" class="btn btn-default">Register</button>
+    <button type="submit" class="btn btn-outline-info waves-effect">Register</button>
   </form>
 </div>
