--- a/views/statics/404.ejs
+++ b/views/statics/404.ejs
@@ -1,5 +1,5 @@
 <main>
-  <section id="chook">
+  <section id="404">
     <h1>404 - Not Found</h1>
     <p>click on a link above...</p>
   </section>
