--- a/views/users/edit.ejs
+++ b/views/users/edit.ejs
@@ -33,6 +33,6 @@
     <input type="text" name="funnyStory" id="funnyStory" value="<%= user.funnyStory %>">
   </div>
 
-  <input class="btn btn-default" type="submit" value="Submit">
+  <input class="btn btn-outline-info waves-effect" type="submit" value="Submit">
 
 </form>
