--- a/views/events/index.ejs
+++ b/views/events/index.ejs
@@ -17,7 +17,7 @@
       <div class="col-sm-4"
       <h2>date:<%= event.date %></h2>
       <h3><a href="/events/<%= event.id %>"><%= event.activity %></a></h3>
-      <img class="img-fluid" src="<%= event.image %>" alt="<%= event.activity %>">
+      <img class="img-fluid" src="<%= event.image %>" alt="<%= event.activity %> class=" class="circle" width="304" height="236">
       </div>
     <% }) %>
   </div>
