--- a/views/partials/_footer.ejs
+++ b/views/partials/_footer.ejs
@@ -1,4 +1,5 @@
 
 <footer class="footer">
-  <p>&copy; beknow'in 2017</p>
+      <img src="../assets/images/chickenRun.png" class="circle" width="120" height="40">
+      <p>&copy; made with &#9829;  beknow'in 2017</p>
 </footer>
