--- a/views/users/show.ejs
+++ b/views/users/show.ejs
@@ -5,7 +5,7 @@
 
   <div class="row">
     <div class="col-sm-6" id="profilePicture">
-      <img class="img-fluid" src="<%= showUser.profileImageSRC %>" alt="<%= showUser.firstName %>">
+      <img class="img-fluid" src="<%= showUser.profileImageSRC %>" alt="<%= showUser.firstName %>" class="circle" width="304" height="236">
     </div>
     <div class="col-sm-6">
       <p><strong>Here's how I know the lucky hen:</strong></p>
