--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -1,58 +1,46 @@
-<div id="backgroundImages">
-
   <h1>Edit your event</h1>
-
-<form method="POST" action="/events/<%= event.id %>">
-  <input type="hidden" name="_method" value="PUT">
-
-  <div>
-    <label for="henName">Bride to be's name?</label>
-    <input type="text" name="henName" id="henName" value="<%= event.henName %>" placeholder="Hen's name">
-  </div>
-
-  <div>
-    <label for="activity">Activity</label>
-    <input type="text" name="activity" id="activity" value="<%= event.activity %>">
-  </div>
-
-  <div>
-    <label for="date">Date</label>
-    <input type="date" name="date" id="date" value="<%= event.date %>">
-  </div>
-
-  <div>
-    <label for="time">Time</label>
-    <input type="time" name="time" id="time" value="<%= event.time %>">
-  </div>
-
-  <div>
-    <label for="description">Description</label>
-    <input type="text" name="description" id="description" value="<%= event.description %>">
-  </div>
-
-  <div>
-    <label>Add url for image here</label>
-    <input type="text" name="image" id="image" value="<%= event.image %>">
-  </div>
-
-  <div>
-    <label for="address1">Street Address</label>
-    <input type="text" name="address1" id="address1" value="<%= event.address1 %>">
-  </div>
-
-  <div>
-    <label for="address2">City</label>
-    <input type="text" name="address2" id="address2" value="<%= event.address2 %>">
-  </div>
-
-  <div>
-    <label for="postcode">Postcode</label>
-    <input class="autocomplete" type="text" name="postcode" id="postcode">
-    <input type="hidden" name="lat">
-    <input type="hidden" name="lng">
-  </div>
-
-  <div>
-    <button type="button" class="btn btn-outline-info waves-effect">Edit</button>
-  </div>
-</form>
+  <form method="POST" action="/events/<%= event.id %>">
+    <input type="hidden" name="_method" value="PUT">
+    <div>
+      <label for="henName">Bride to be's name?</label>
+      <input type="text" name="henName" id="henName" value="<%= event.henName %>" placeholder="Hen's name">
+    </div>
+    <div>
+      <label for="activity">Activity</label>
+      <input type="text" name="activity" id="activity" value="<%= event.activity %>">
+    </div>
+    <div>
+      <label for="date">Date</label>
+      <input type="date" name="date" id="date" value="<%= event.date %>">
+    </div>
+    <div>
+      <label for="time">Time</label>
+      <input type="time" name="time" id="time" value="<%= event.time %>">
+    </div>
+    <div>
+      <label for="description">Description</label>
+      <input type="text" name="description" id="description" value="<%= event.description %>">
+    </div>
+    <div>
+      <label>Add url for image here</label>
+      <input type="text" name="image" id="image" value="<%= event.image %>">
+    </div>
+    <div>
+      <label for="address1">Street Address</label>
+      <input type="text" name="address1" id="address1" value="<%= event.address1 %>">
+    </div>
+    <div>
+      <label for="address2">City</label>
+      <input type="text" name="address2" id="address2" value="<%= event.address2 %>">
+    </div>
+    <div>
+      <label for="postcode">Postcode</label>
+      <input class="autocomplete" type="text" name="postcode" id="postcode">
+      <input type="hidden" name="lat">
+      <input type="hidden" name="lng">
+    </div>
+    <div>
+      <<input class="btn btn-outline-info waves-effect" type="submit" value="Submit">
+    </div>
+  </form>
+</div>
