--- a/views/statics/404.ejs
+++ b/views/statics/404.ejs
@@ -1,6 +1,6 @@
 <main>
-  <section id="404">
+  <div id="error404">
     <h1>404 - Not Found</h1>
     <p>click on a link above...</p>
-  </section>
+  </div>
 </main>
