--- a/views/events/edit.ejs
+++ b/views/events/edit.ejs
@@ -40,7 +40,7 @@
       <input type="hidden" name="lng">
     </div>
     <div>
-      <<input class="btn btn-outline-info waves-effect" type="submit" value="Submit">
+      <input class="btn btn-outline-info waves-effect" type="submit" value="Submit">
     </div>
   </form>
 </div>
