--- a/views/partials/_scripts.ejs
+++ b/views/partials/_scripts.ejs
@@ -1,4 +1,5 @@
+
+<script type="text/javascript" src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc7hNgWybvVmyFoxffU6oAKwOBif-cJIo&libraries=places"></script>
 <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js"></script>
-<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDc7hNgWybvVmyFoxffU6oAKwOBif-cJIo&libraries=places"></script>
 <script src="/js/mapStyles.js" charset="utf-8"></script>
 <script src="/js/app.js" charset="utf-8"></script>
